<resources>
    <string name="app_name">FridgeAppRator</string>
    <string name="welcome_text">Aloita FridgeAppRatorin käyttö klikkaamalla jotain alla olevista vaihtoehdoista!</string>
    <string name="shoppingList">Ostoslista</string>
    <string name="fridge">Jääkaappi</string>
    <string name="addProduct">Anna Lisättävä Tuote</string>
    <string name="instructions">Ohjeet</string>
    <string name="shoppingListName">Anna Ostoslistan Nimi</string>
    <string name="hintAmount">0</string>
    <string name="newProductName">Anna Lisättävä Tuote</string>
    <string name="button_addProduct">Jääkaappiin</string>
    <string name="button_newShoppingList">Ostoslista</string>
    <string name="button_instructions">Ohjeet</string>
    <string name="noProductsFound">No products</string>
    <string name="popupTextAddNewProduct">Lisää Uusi Tuote</string>
    <string name="expirationDate">Anna Viimeinen Käyttöpäivä</string>
    <string name="importShoppingList">Vie Tuotteet</string>
    <string name="buttonSkipAppProductPopUp">Ohita</string>
    <string name="buttonAddProductPopUp">Lisää</string>
    <string name="addNewShoppinglistProductToast">Tekstikenttä tyhjä tai määrä on alle 1</string>
    <string name="instructionsHeader">Ohjeet</string>
    <string name="notificationsHeader">Ilmoitukset</string>
    <string name="notificationTitle">Joko vanhetunteita tai vanhenevia tuotteita</string>
    <string name="instructions_main_header_contents">Sisällöt:</string>
    <string name="instructions_main_header_fridge"><a href="">1. Jääkaappi</a></string>
    <string name="instructions_main_header_shopping_list"><a href="">2. Ostoslista</a></string>
    <string name="instructions_main_header_notifications"><a href="">3. Ilmoitukset</a></string>
    <string name="todo">TODO</string>
</resources>